Fix spacing

--- a/src/.vitepress/theme/theme.css
+++ b/src/.vitepress/theme/theme.css
@@ -200,7 +200,7 @@
 
 .outline-marker[data-v-3f9b8864] {
   width: 3px;
-  height: 28px;
+  height: 26px;
   left: -3px;
   border-radius: 5px;
 }
@@ -213,7 +213,7 @@
 .outline-link {
   font-weight: 400;
   letter-spacing: 0.4px;
-  padding: 3px 0;
+  padding: 2px 0;
   font-size: 14px;
 }
 
